# inkworm

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-21-generate-flow.md  2026-04-21-inkworm-v1-config-wizard.md  2026-04-21-inkworm-v1-course-list.md  2026-04-21-inkworm-v1-foundation.md  2026-04-21-inkworm-v1-llm.md  2026-04-21-inkworm-v1-tui-core.md  2026-04-22-inkworm-v1-robustness.md  2026-04-22-inkworm-v1-tts-auto.md  2026-04-22-inkworm-v1-tts-core.md  2026-04-22-inkworm-v1-tts-integration.md  2026-04-22-inkworm-v1-tts-live.md  2026-04-22-inkworm-v1-tts-palette.md  2026-04-22-inkworm-v1-tts-ux.md  2026-04-27-inkworm-mistakes.md  2026-04-27-shell-disguise.md  2026-05-06-courses-yyyy-mm-subdir.md  2026-05-07-bundled-course-audio.md
docs/superpowers/progress/: 2026-04-21-session-log.md  2026-04-22-plan-4b-session-log.md  2026-04-22-plan-5-session-log.md  2026-04-22-plan-6a-session-log.md  2026-04-22-plan-6b-session-log.md  2026-04-22-plan-6c-session-log.md  2026-04-22-plan-6d-session-log.md  2026-04-22-plan-6e-session-log.md
docs/superpowers/specs/: 2026-04-21-inkworm-design.md  2026-04-21-inkworm-v1-config-wizard-design.md  2026-04-21-inkworm-v1-generate-flow-design.md  2026-04-21-inkworm-v1-tui-core-design.md  2026-04-22-inkworm-v1-robustness-design.md  2026-04-22-inkworm-v1-tts-ux-design.md  2026-04-27-inkworm-mistakes-design.md  2026-04-27-shell-disguise-design.md  2026-05-06-courses-yyyy-mm-subdir-design.md  2026-05-07-bundled-course-audio-design.md
examples/: smoke.rs
fixtures/courses/bad/: chinese_too_long.json  drills_too_few.json  drills_too_many.json  empty_title.json  english_contains_ipa.json  invalid_focus.json  invalid_soundmark.json  last_drill_not_full.json  order_not_monotonic.json  schema_version_wrong.json  sentences_too_few.json  sentences_too_many.json  stage_not_monotonic.json
fixtures/courses/good/: maximal.json  minimal.json  soundmark_empty.json
src/: app.rs  clock.rs  error.rs  judge.rs  lib.rs  main.rs
src/audio/: bundle.rs  mod.rs  player.rs
src/config/: defaults.rs  mod.rs
src/llm/: client.rs  error.rs  mod.rs  prompt.rs  reflexion.rs  types.rs
src/storage/: atomic.rs  course.rs  failed.rs  icloud.rs  migrate.rs  mistakes.rs  mod.rs  paths.rs  progress.rs
src/storage/mistakes/: tests.rs
src/tts/: auth.rs  cache.rs  device.rs  frame.rs  iflytek.rs  mod.rs  speaker.rs  wav.rs
src/tts/snapshots/: inkworm__tts__auth__tests__authorized_url_snapshot.snap
src/ui/: config_wizard.rs  course_list.rs  doctor.rs  error_banner.rs  event.rs  generate.rs  mod.rs  palette.rs  shell_chrome.rs  skeleton.rs  study.rs  task_msg.rs  terminal.rs  tts_status.rs
tests/: bundled_audio.rs  config.rs  config_wizard.rs  course_list.rs  generate.rs  iflytek_speaker.rs  judge.rs  llm.rs  mistakes_flow.rs  storage.rs  tts_app_wiring.rs  tts_palette.rs  tts_status.rs  ui.rs
tests/common/: llm_mocks.rs  mod.rs
tests/snapshots/: llm__prompts__phase1_system.snap  llm__prompts__phase2_system.snap  llm__prompts__repair_template.snap
