[package]
name = "inkworm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Terminal bilingual typing tutor"
license = "MIT"

[lib]
name = "inkworm"
path = "src/lib.rs"

[[bin]]
name = "inkworm"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json"] }
serial_test = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
