[package]
name = "inkworm"
version = "0.2.6"
edition = "2021"
rust-version = "1.75"
description = "Terminal bilingual typing tutor"
license = "MIT"

[lib]
name = "inkworm"
path = "src/lib.rs"

[[bin]]
name = "inkworm"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "process", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
tokio-util = "0.7"
futures = "0.3"
ratatui = { version = "0.29", default-features = false, features = ["crossterm", "unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
whoami = "1"

# TTS core (Plan 6b): URL signing + cache key + WAV I/O
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
httpdate = "1"
blake3 = "1"
hound = "3"

# TTS live (Plan 6c): WS streaming + local audio playback
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rodio = { version = "0.19", default-features = false, features = ["mp3"] }
cpal = "0.15"
tui-textarea = { version = "0.7.0", features = ["crossterm"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json"] }
serial_test = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "test-util"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
